<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_menu_dashboard"
            android:title="@string/title_dashboard" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_menu_tasks"
            android:title="@string/title_tasks" />
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_menu_calendar"
            android:title="@string/title_calendar" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_map"
            android:title="@string/title_map" />
        <item
            android:id="@+id/nav_groceries"
            android:icon="@drawable/ic_menu_groceries"
            android:title="@string/title_groceries" />

    </group>



</menu>
